force-app/main/default/objects/Quote_Package__c/Quote_Package__c.object-meta.xml
<CustomObject>
    <label>Quote Package</label>
    <nameField>
        <label>Quote Package Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Packages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>