force-app/main/default/objects/Quote_Package__c/fields/Bundle_Package__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Package__c</fullName>
    <label>Bundle Package</label>
    <referenceTo>Pack__c</referenceTo>
    <relationshipLabel>Quote Packages</relationshipLabel>
    <relationshipName>Quote_Packages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>