force-app/main/default/objects/Quote_Package__c/fields/Opportunity_Package__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Package</label>
    <referenceTo>OpportunityPackage__c</referenceTo>
    <relationshipLabel>Quote Packages</relationshipLabel>
    <relationshipName>Quote_Packages</relationshipName>
    <type>Lookup</type>
</CustomField>